patches-graph-json/tests/snapshots/golden__nested_templates.snap
---
source: patches-graph-json/tests/golden.rs
expression: "& doc"
---
{
  "version": 1,
  "modules": [
    {
      "id": "fv/filt",
      "qname": {
        "path": [
          "fv"
        ],
        "name": "filt"
      },
      "type_name": "Lowpass",
      "shape": [],
      "params": [
        {
          "name": "cutoff",
          "value": {
            "kind": "scalar",
            "scalar": {
              "type": "float",
              "value": 6.2
            }
          }
        }
      ],
      "port_aliases": [],
      "ports": {
        "inputs": [
          {
            "name": "in",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "voct",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "fm",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "resonance_cv",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          }
        ],
        "outputs": [
          {
            "name": "out",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          }
        ]
      },
      "provenance": {
        "site": "[span]",
        "expansion": [
          "[span]"
        ]
      }
    },
    {
      "id": "fv/v/env",
      "qname": {
        "path": [
          "fv",
          "v"
        ],
        "name": "env"
      },
      "type_name": "Adsr",
      "shape": [],
      "params": [
        {
          "name": "attack",
          "value": {
            "kind": "scalar",
            "scalar": {
              "type": "float",
              "value": 0.02
            }
          }
        },
        {
          "name": "sustain",
          "value": {
            "kind": "scalar",
            "scalar": {
              "type": "float",
              "value": 0.7
            }
          }
        },
        {
          "name": "release",
          "value": {
            "kind": "scalar",
            "scalar": {
              "type": "float",
              "value": 0.2
            }
          }
        }
      ],
      "port_aliases": [],
      "ports": {
        "inputs": [
          {
            "name": "trigger",
            "index": 0,
            "kind": "mono",
            "mono_layout": "trigger",
            "poly_layout": "audio"
          },
          {
            "name": "gate",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "vca_in",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          }
        ],
        "outputs": [
          {
            "name": "out",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "vca_out",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          }
        ]
      },
      "provenance": {
        "site": "[span]",
        "expansion": [
          "[span]",
          "[span]"
        ]
      }
    },
    {
      "id": "fv/v/osc",
      "qname": {
        "path": [
          "fv",
          "v"
        ],
        "name": "osc"
      },
      "type_name": "Osc",
      "shape": [],
      "params": [],
      "port_aliases": [],
      "ports": {
        "inputs": [
          {
            "name": "voct",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "fm",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "pulse_width_cv",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "phase_mod",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "sync",
            "index": 0,
            "kind": "mono",
            "mono_layout": "trigger",
            "poly_layout": "audio"
          }
        ],
        "outputs": [
          {
            "name": "sine",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "triangle",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "sawtooth",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "square",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "reset_out",
            "index": 0,
            "kind": "mono",
            "mono_layout": "trigger",
            "poly_layout": "audio"
          }
        ]
      },
      "provenance": {
        "site": "[span]",
        "expansion": [
          "[span]",
          "[span]"
        ]
      }
    },
    {
      "id": "fv/v/vca",
      "qname": {
        "path": [
          "fv",
          "v"
        ],
        "name": "vca"
      },
      "type_name": "Vca",
      "shape": [],
      "params": [],
      "port_aliases": [],
      "ports": {
        "inputs": [
          {
            "name": "in",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "cv",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          }
        ],
        "outputs": [
          {
            "name": "out",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          }
        ]
      },
      "provenance": {
        "site": "[span]",
        "expansion": [
          "[span]",
          "[span]"
        ]
      }
    },
    {
      "id": "out",
      "qname": {
        "path": [],
        "name": "out"
      },
      "type_name": "AudioOut",
      "shape": [],
      "params": [],
      "port_aliases": [],
      "ports": {
        "inputs": [
          {
            "name": "in",
            "index": 0,
            "kind": "stereo",
            "mono_layout": "audio",
            "poly_layout": "audio"
          }
        ],
        "outputs": []
      },
      "provenance": {
        "site": "[span]",
        "expansion": []
      }
    },
    {
      "id": "seq",
      "qname": {
        "path": [],
        "name": "seq"
      },
      "type_name": "MidiToCv",
      "shape": [],
      "params": [],
      "port_aliases": [],
      "ports": {
        "inputs": [
          {
            "name": "midi",
            "index": 0,
            "kind": "poly",
            "mono_layout": "audio",
            "poly_layout": "midi"
          }
        ],
        "outputs": [
          {
            "name": "voct",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "trigger",
            "index": 0,
            "kind": "mono",
            "mono_layout": "trigger",
            "poly_layout": "audio"
          },
          {
            "name": "gate",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "mod",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "pitch",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "velocity",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          },
          {
            "name": "slur",
            "index": 0,
            "kind": "mono",
            "mono_layout": "audio",
            "poly_layout": "audio"
          }
        ]
      },
      "provenance": {
        "site": "[span]",
        "expansion": []
      }
    }
  ],
  "connections": [
    {
      "from": {
        "module": "fv/filt",
        "port": "out",
        "index": 0
      },
      "to": {
        "module": "out",
        "port": "in",
        "index": 0
      },
      "map": {
        "scale": 1.0,
        "offset": 0.0
      },
      "provenance": {
        "site": "[span]",
        "expansion": []
      },
      "from_provenance": {
        "site": "[span]",
        "expansion": []
      },
      "to_provenance": {
        "site": "[span]",
        "expansion": []
      }
    },
    {
      "from": {
        "module": "fv/v/env",
        "port": "out",
        "index": 0
      },
      "to": {
        "module": "fv/v/vca",
        "port": "cv",
        "index": 0
      },
      "map": {
        "scale": 1.0,
        "offset": 0.0
      },
      "provenance": {
        "site": "[span]",
        "expansion": [
          "[span]",
          "[span]"
        ]
      },
      "from_provenance": {
        "site": "[span]",
        "expansion": [
          "[span]",
          "[span]"
        ]
      },
      "to_provenance": {
        "site": "[span]",
        "expansion": [
          "[span]",
          "[span]"
        ]
      }
    },
    {
      "from": {
        "module": "fv/v/osc",
        "port": "sine",
        "index": 0
      },
      "to": {
        "module": "fv/v/vca",
        "port": "in",
        "index": 0
      },
      "map": {
        "scale": 1.0,
        "offset": 0.0
      },
      "provenance": {
        "site": "[span]",
        "expansion": [
          "[span]",
          "[span]"
        ]
      },
      "from_provenance": {
        "site": "[span]",
        "expansion": [
          "[span]",
          "[span]"
        ]
      },
      "to_provenance": {
        "site": "[span]",
        "expansion": [
          "[span]",
          "[span]"
        ]
      }
    },
    {
      "from": {
        "module": "fv/v/vca",
        "port": "out",
        "index": 0
      },
      "to": {
        "module": "fv/filt",
        "port": "in",
        "index": 0
      },
      "map": {
        "scale": 1.0,
        "offset": 0.0
      },
      "provenance": {
        "site": "[span]",
        "expansion": [
          "[span]"
        ]
      },
      "from_provenance": {
        "site": "[span]",
        "expansion": [
          "[span]"
        ]
      },
      "to_provenance": {
        "site": "[span]",
        "expansion": [
          "[span]"
        ]
      }
    },
    {
      "from": {
        "module": "seq",
        "port": "gate",
        "index": 0
      },
      "to": {
        "module": "fv/v/env",
        "port": "gate",
        "index": 0
      },
      "map": {
        "scale": 1.0,
        "offset": 0.0
      },
      "provenance": {
        "site": "[span]",
        "expansion": []
      },
      "from_provenance": {
        "site": "[span]",
        "expansion": []
      },
      "to_provenance": {
        "site": "[span]",
        "expansion": []
      }
    },
    {
      "from": {
        "module": "seq",
        "port": "pitch",
        "index": 0
      },
      "to": {
        "module": "fv/v/osc",
        "port": "voct",
        "index": 0
      },
      "map": {
        "scale": 1.0,
        "offset": 0.0
      },
      "provenance": {
        "site": "[span]",
        "expansion": []
      },
      "from_provenance": {
        "site": "[span]",
        "expansion": []
      },
      "to_provenance": {
        "site": "[span]",
        "expansion": []
      }
    }
  ]
}
